--- a/style.css
+++ b/style.css
@@ -430,14 +430,18 @@ body {
 }
 
 .continerfm {
-  width: 500px;
+  width: 100%;
   height: 30px;
-  margin-top: 11px;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .hrfm {
-  margin-top: 15px;
+  margin-top: 3.5px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   width: 100%;
   height: 1px;
   background-color: rgb(138, 138, 138);
@@ -445,8 +449,11 @@ body {
 
 .hrscrollfm {
   position: absolute;
-  margin-top: -5px;
-  width: 100px;
+  left: 0%;
+  top: 50%;
+  transform: translateY(-50%);
+  transform: translateX(0%);
+  width: 30%;
   height: 7px;
   border-radius: 4px;
   background-color: orange;
@@ -1322,7 +1329,7 @@ a:hover {
 
   @media (max-width : 495px) {
     .sammry h1 {
-      font-size: 25px;
+      font-size: 30px;
     }
 
     .header-main {
@@ -1339,33 +1346,10 @@ a:hover {
     }
 
     .image-head {
+    margin-bottom: 30px;
       grid-area: up;
     }
   }
-
-  /* 
-  @media (max-width : 420px) {
-    .sammry h1 {
-      font-size: 19px;
-    }
-
-    .aboutUs-text {
-      margin: auto;
-    }
-
-    .sammry {
-      margin: auto;
-    }
-
-    .image-head {
-      width: 150px;
-      height: 150px;
-    }
-
-
-  } */
-
-
 
   /* chefs */
   .chefs {
@@ -1721,10 +1705,6 @@ a:hover {
     height: 200px;
   }
 
-  .continerfm {
-    display: none;
-  }
-
   .aboutUs {
     display: grid;
     grid-template-columns: auto;
@@ -1809,19 +1789,22 @@ a:hover {
   .chef-icon:hover {
     padding-bottom: 5px;
   }
+
+  .card-icon {
+    height: 17vh;
+    width: 17vh;
+  }
+
+  .chef-img {
+    height: 17vh;
+    width: 17vh;
+  }
 }
 
 @media (max-width : 380px) {
-  .sammry h1 {
-    font-size: 13px;
-  }
-
-  .sammry p {
-    font-size: 10px;
-  }
 
   .sammry {
-    width: 100px;
+    width: 150px;
   }
 
   .change {
